<resources>
    <string name="app_name">Trivia 5</string>
    <string name="app_title_namE">Trivia</string>
    <string name="question_out_of">Question : 0/897</string>
    <string name="question_tv">Make sure your internet connection is on while you using this app. Otherwise you will not be able see any Question.</string>
    <string name="true_btn_text">TRUE</string>
    <string name="false_button_text">FALSE</string>
    <string name="next_button_text">NEXT</string>
    <string name="correct_answer">Correct</string>
    <string name="wrong_answer">Wrong</string>
    <string name="high_score">High Score : 0</string>
    <string name="current_score">Current Score\n0</string>
    <string name="banner_id_real">ca-app-pub-4514423906552044/8431072793</string>
    <string name="interstitial_id_real">ca-app-pub-4514423906552044/5761511578</string>
</resources>